[WAL-87] Created new layout for backup

--- a/app/src/main/res/layout-land/fragment_backup_success_layout.xml
+++ b/app/src/main/res/layout-land/fragment_backup_success_layout.xml
@@ -115,7 +115,7 @@
         />
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/close_btn"
-        style="@style/MaterialButtonStyle.Backup"
+        style="@style/MaterialButtonStyle.Backup.Large"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
