--- a/app/src/main/res/layout-land/backup_tooltip.xml
+++ b/app/src/main/res/layout-land/backup_tooltip.xml
@@ -31,7 +31,7 @@
           android:layout_marginEnd="12dp"
           android:fontFamily="sans-serif"
           android:text="@string/backup_tooltip_body"
-          android:textColor="@color/black"
+          android:textColor="@color/tooltip_black"
           android:textSize="14sp"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintTop_toTopOf="parent"
