--- a/app/src/main/res/layout-land/fragment_backup_creation_layout.xml
+++ b/app/src/main/res/layout-land/fragment_backup_creation_layout.xml
@@ -95,7 +95,7 @@
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/proceed_button"
-        style="@style/MaterialButtonStyle.Backup"
+        style="@style/MaterialButtonStyle.Backup.Large"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
