--- a/app/src/main/res/layout/backup_tooltip.xml
+++ b/app/src/main/res/layout/backup_tooltip.xml
@@ -31,7 +31,7 @@
           android:layout_marginEnd="12dp"
           android:fontFamily="sans-serif"
           android:text="@string/backup_tooltip_body"
-          android:textColor="@color/black"
+          android:textColor="@color/fakeBlack"
           android:textSize="14sp"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintTop_toTopOf="parent"
@@ -51,8 +51,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
-            android:layout_marginEnd="13dp"
             android:layout_marginStart="13dp"
+            android:layout_marginEnd="13dp"
             android:backgroundTint="@color/white"
             android:maxWidth="126dp"
             android:minWidth="80dp"
