--- a/app/src/main/res/layout/fragment_backup_wallet_layout.xml
+++ b/app/src/main/res/layout/fragment_backup_wallet_layout.xml
@@ -13,118 +13,33 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:focusableInTouchMode="true"
-        android:orientation="vertical"
         android:paddingStart="16dp"
         android:paddingEnd="16dp"
+        android:paddingBottom="@dimen/big_margin"
         >
-
       <include
-          android:id="@+id/wallet_info"
-          layout="@layout/item_wallet_addr"
-          android:layout_width="wrap_content"
+          android:id="@+id/wallet_backup_info"
+          layout="@layout/layout_wallet_backup_info"
+          android:layout_width="match_parent"
           android:layout_height="wrap_content"
-          android:layout_marginTop="48dp"
-          app:layout_constraintBottom_toTopOf="@id/password_label_ic"
-          app:layout_constraintEnd_toEndOf="parent"
-          app:layout_constraintStart_toStartOf="parent"
+          android:layout_marginTop="@dimen/big_margin"
           app:layout_constraintTop_toTopOf="parent"
           />
-
-      <ImageView
-          android:id="@+id/password_label_ic"
-          android:layout_width="18dp"
-          android:layout_height="18dp"
-          android:layout_marginTop="26dp"
-          android:layout_marginEnd="4dp"
-          android:src="@drawable/ic_password_locket"
-          app:layout_constraintBottom_toTopOf="@id/password_container"
-          app:layout_constraintEnd_toStartOf="@id/password_label"
-          app:layout_constraintHorizontal_bias="0"
-          app:layout_constraintHorizontal_chainStyle="packed"
-          app:layout_constraintStart_toStartOf="parent"
-          app:layout_constraintTop_toBottomOf="@id/wallet_info"
-          />
-
-      <TextView
-          android:id="@+id/password_label"
-          style="@style/WalletBackupTextStyle.Big"
-          android:layout_width="wrap_content"
-          android:layout_height="wrap_content"
-          android:lineHeight="24sp"
-          android:text="@string/backup_password_title"
-          app:layout_constraintBottom_toBottomOf="@id/password_label_ic"
-          app:layout_constraintEnd_toEndOf="parent"
-          app:layout_constraintStart_toEndOf="@id/password_label_ic"
-          app:layout_constraintTop_toTopOf="@id/password_label_ic"
-          />
-
-      <com.google.android.material.textfield.TextInputLayout
-          android:id="@+id/password_container"
-          style="@style/PasswordTextInputLayout"
+      <include
+          android:id="@+id/backup_password_toggle_layout"
+          layout="@layout/layout_backup_password_toggle"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
-          android:layout_marginTop="15dp"
-          app:layout_constraintEnd_toEndOf="parent"
-          app:layout_constraintStart_toStartOf="parent"
-          app:layout_constraintTop_toBottomOf="@id/password_label_ic"
-          >
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/password"
-            style="@style/PasswordEditText"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:padding="16dp"
-            />
-      </com.google.android.material.textfield.TextInputLayout>
-
-      <androidx.constraintlayout.widget.ConstraintLayout
-          android:layout_width="match_parent"
-          android:layout_height="wrap_content"
-          android:layout_marginTop="21dp"
-          android:layout_marginBottom="8dp"
-          app:layout_constraintBottom_toBottomOf="parent"
-          app:layout_constraintEnd_toEndOf="parent"
-          app:layout_constraintStart_toStartOf="parent"
-          app:layout_constraintTop_toBottomOf="@id/password_container"
-
-          >
-        <TextView
-            android:id="@+id/description"
-            style="@style/WalletBackupTextStyle"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="12dp"
-            android:background="@drawable/item_curved_border"
-            android:lineHeight="20sp"
-            android:paddingHorizontal="14dp"
-            android:paddingTop="22dp"
-            android:paddingBottom="18dp"
-            android:text="@string/backup_body"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            />
-        <ImageView
-            android:layout_width="25dp"
-            android:layout_height="25dp"
-            android:layout_marginStart="10dp"
-            android:background="@color/white"
-            android:src="@drawable/ic_info_white_bg"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            />
-      </androidx.constraintlayout.widget.ConstraintLayout>
-
+          android:layout_marginTop="32dp"
+          app:layout_constraintTop_toBottomOf="@id/wallet_backup_info"
+          />
     </androidx.constraintlayout.widget.ConstraintLayout>
   </ScrollView>
 
-  <RelativeLayout
+  <androidx.constraintlayout.widget.ConstraintLayout
       android:id="@+id/backup_button_layout"
       android:layout_width="match_parent"
-      android:layout_height="64dp"
-      android:layout_alignParentBottom="true"
+      android:layout_height="wrap_content"
       android:clipChildren="false"
       android:clipToPadding="false"
       app:layout_constraintBottom_toBottomOf="parent"
@@ -132,21 +47,22 @@
     <View
         android:layout_width="match_parent"
         android:layout_height="1dp"
-        android:layout_alignParentTop="true"
+        android:layout_marginBottom="@dimen/big_margin"
         android:background="@color/list_separator_color"
+        app:layout_constraintBottom_toTopOf="@id/backup_btn"
         />
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/backup_btn"
         style="@style/MaterialButtonStyle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_marginStart="16dp"
-        android:layout_marginEnd="16dp"
-        android:layout_marginBottom="16dp"
+        android:layout_marginStart="@dimen/big_margin"
+        android:layout_marginEnd="@dimen/big_margin"
+        android:layout_marginBottom="32dp"
         android:text="@string/backup_button"
+        app:layout_constraintBottom_toBottomOf="parent"
         />
 
-  </RelativeLayout>
+  </androidx.constraintlayout.widget.ConstraintLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
