--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -163,9 +163,12 @@
   </style>
 
   <style name="MaterialButtonStyle.Backup" parent="MaterialButtonStyle">
-    <item name="android:minWidth">240dp</item>
     <item name="android:paddingStart">@dimen/half_large_padding</item>
     <item name="android:paddingEnd">@dimen/half_large_padding</item>
+  </style>
+
+  <style name="MaterialButtonStyle.Backup.Large" parent="MaterialButtonStyle.Backup">
+    <item name="android:minWidth">240dp</item>
   </style>
 
   <style name="MaterialButtonStyle.Light">
@@ -390,7 +393,7 @@
   <style name="TopUpTextStyle">
     <item name="android:fontFamily">sans-serif</item>
     <item name="android:gravity">center</item>
-    <item name="android:textColor">@color/black</item>
+    <item name="android:textColor">@color/fakeBlack</item>
     <item name="android:textSize">12sp</item>
   </style>
 
@@ -582,7 +585,7 @@
   <style name="TransactionSuccessTextStyle">
     <item name="android:fontFamily">sans-serif-medium</item>
     <item name="android:textSize">16sp</item>
-    <item name="android:textColor">@color/black</item>
+    <item name="android:textColor">@color/fakeBlack</item>
   </style>
 
   <style name="GamificationBottomPeekTextStyle">
@@ -650,6 +653,11 @@
   <style name="WalletValidationTextStyle.Tooltip" parent="TextAppearance.AppCompat.Body1.Roboto.Regular">
     <item name="android:textColor">#4a4a4a</item>
     <item name="android:textSize">10sp</item>
+  </style>
+
+  <style name="WalletBackupTextStyle.Bold">
+    <item name="android:color">@color/black</item>
+    <item name="android:textStyle">bold</item>
   </style>
 
   <style name="BalanceVerifyWalletChip" parent="TextAppearance.AppCompat.Body1.Roboto.Regular">
@@ -768,5 +776,13 @@
   <style name="PasswordEditText">
     <item name="android:inputType">textPassword</item>
     <item name="android:imeOptions">flagNoFullscreen|flagNoExtractUi</item>
+  </style>
+
+  <style name="WalletBackupWarningStyle">
+    <item name="android:textColor">@color/warning_text_red</item>
+  </style>
+
+  <style name="WalletBackupWarningStyle.Bold">
+    <item name="android:textStyle">bold</item>
   </style>
 </resources>
