[WAL-74] Temporary commit for git migration

--- a/app/src/main/res/layout-land/fragment_verification_intro.xml
+++ b/app/src/main/res/layout-land/fragment_verification_intro.xml
@@ -13,6 +13,17 @@
       android:layout_height="wrap_content"
       >
 
+    <ProgressBar
+        android:id="@+id/progress_bar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:indeterminateDrawable="@drawable/gradient_progress"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        />
+
     <TextView
         android:id="@+id/title"
         style="@style/VerifyWallet.Title"
