--- a/app/src/main/res/layout-land/fragment_verification_code.xml
+++ b/app/src/main/res/layout-land/fragment_verification_code.xml
@@ -111,7 +111,7 @@
         android:layout_marginTop="24dp"
         android:layout_marginBottom="21dp"
         android:background="@color/layout_separator_color"
-        app:layout_constraintBottom_toTopOf="@id/cancel"
+        app:layout_constraintBottom_toTopOf="@id/maybe_later"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/layout_example"
@@ -119,19 +119,19 @@
         />
 
     <Button
-        android:id="@+id/submit"
+        android:id="@+id/confirm"
         style="@style/VerifyWallet.Submit.Button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="24dp"
         android:text="@string/confirm_button"
-        app:layout_constraintBaseline_toBaselineOf="@id/cancel"
+        app:layout_constraintBaseline_toBaselineOf="@id/maybe_later"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         />
 
     <Button
-        android:id="@+id/cancel"
+        android:id="@+id/maybe_later"
         style="@style/VerifyWallet.Cancel.Button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -139,7 +139,7 @@
         android:layout_marginBottom="22dp"
         android:text="@string/backup_tooltip_later_button"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@id/submit"
+        app:layout_constraintEnd_toStartOf="@id/confirm"
         app:layout_constraintHorizontal_bias="1"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintVertical_bias="0"
