--- a/app/src/main/res/layout/layout_verify_example.xml
+++ b/app/src/main/res/layout/layout_verify_example.xml
@@ -88,53 +88,18 @@
           tools:text="Description"
           />
 
-      <LinearLayout
-          android:layout_width="0dp"
+      <TextView
+          android:id="@+id/description_value"
+          style="@style/VerifyWallet.Example.Summary.Value"
+          android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_marginTop="10dp"
-          android:gravity="center_horizontal"
-          android:orientation="horizontal"
+          android:background="@drawable/background_example_code"
           app:layout_constraintEnd_toStartOf="@id/guideline_end"
           app:layout_constraintStart_toEndOf="@id/guideline_start"
           app:layout_constraintTop_toBottomOf="@id/description_label"
-          >
-
-        <TextView
-            style="@style/VerifyWallet.Example.Summary.Value"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="2dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/description_label"
-            tools:text="APPC*"
-            />
-
-        <TextView
-            style="@style/VerifyWallet.Example.Summary.Value"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="1dp"
-            android:background="@drawable/background_example_code"
-            android:paddingStart="2dp"
-            android:paddingEnd="2dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/description_label"
-            tools:text="1234"
-            />
-
-        <TextView
-            style="@style/VerifyWallet.Example.Summary.Value"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/description_label"
-            tools:text="CODE"
-            />
-
-      </LinearLayout>
+          tools:text="APPC*  1234  CODE"
+          />
 
       <TextView
           android:id="@+id/amount_label"
