--- a/app/src/main/res/layout/layout_wallet_backup_info.xml
+++ b/app/src/main/res/layout/layout_wallet_backup_info.xml
@@ -25,7 +25,9 @@
       android:layout_marginStart="@dimen/big_margin"
       android:layout_marginTop="@dimen/normal_margin"
       android:layout_marginEnd="@dimen/big_margin"
+      android:ellipsize="end"
       android:gravity="center"
+      android:maxLines="1"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toBottomOf="@id/backup_wallet_icon"
@@ -37,7 +39,9 @@
       android:layout_width="0dp"
       android:layout_height="wrap_content"
       android:layout_marginTop="@dimen/normal_margin"
+      android:ellipsize="end"
       android:gravity="center"
+      android:maxLines="1"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toBottomOf="@id/backup_wallet_address"
