--- a/app/src/main/res/layout/fragment_verification_intro.xml
+++ b/app/src/main/res/layout/fragment_verification_intro.xml
@@ -1,125 +1,159 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:fillViewport="true"
-    android:theme="@style/MaterialAppTheme"
     >
 
-  <androidx.constraintlayout.widget.ConstraintLayout
+  <ScrollView
+      android:id="@+id/content_container"
       android:layout_width="match_parent"
-      android:layout_height="wrap_content"
+      android:layout_height="match_parent"
+      android:fillViewport="true"
       android:theme="@style/MaterialAppTheme"
       >
 
-    <ProgressBar
-        android:id="@+id/progress_bar"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:indeterminateDrawable="@drawable/gradient_progress"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        />
-
-    <TextView
-        android:id="@+id/title"
-        style="@style/VerifyWallet.Title"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="24dp"
-        android:layout_marginTop="27dp"
-        android:layout_marginEnd="41dp"
-        android:text="@string/card_verification_body"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        />
-
-    <RelativeLayout
-        android:id="@+id/cc_container"
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="30dp"
-        android:paddingStart="@dimen/normal_margin"
-        android:paddingEnd="@dimen/normal_margin"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/title"
+        android:theme="@style/MaterialAppTheme"
         >
 
-      <include
-          android:id="@+id/adyen_card_form"
-          layout="@layout/selected_payment_method_cc"
+      <TextView
+          android:id="@+id/title"
+          style="@style/VerifyWallet.Title"
+          android:layout_width="0dp"
+          android:layout_height="wrap_content"
+          android:layout_marginStart="24dp"
+          android:layout_marginTop="27dp"
+          android:layout_marginEnd="41dp"
+          android:text="@string/card_verification_body"
+          app:layout_constraintEnd_toEndOf="parent"
+          app:layout_constraintStart_toStartOf="parent"
+          app:layout_constraintTop_toTopOf="parent"
+          />
+
+      <RelativeLayout
+          android:id="@+id/cc_container"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
+          android:layout_marginTop="30dp"
+          android:paddingStart="@dimen/normal_margin"
+          android:paddingEnd="@dimen/normal_margin"
+          app:layout_constraintEnd_toEndOf="parent"
+          app:layout_constraintStart_toStartOf="parent"
+          app:layout_constraintTop_toBottomOf="@id/title"
+          >
+
+        <include
+            android:id="@+id/adyen_card_form"
+            layout="@layout/selected_payment_method_cc"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            />
+
+        <Button
+            android:id="@+id/change_card_button"
+            style="@style/VerifyWallet.ChangeCard.Button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/adyen_card_form"
+            android:layout_alignParentEnd="true"
+            android:text="@string/activity_iab_change_card"
+            android:visibility="gone"
+            tools:visibility="visible"
+            />
+
+      </RelativeLayout>
+
+      <TextView
+          android:id="@+id/description"
+          style="@style/VerifyWallet.Description"
+          android:layout_width="0dp"
+          android:layout_height="wrap_content"
+          android:layout_marginStart="@dimen/big_margin"
+          android:layout_marginTop="24dp"
+          android:layout_marginEnd="@dimen/big_margin"
+          android:paddingStart="@dimen/big_margin"
+          android:paddingTop="13dp"
+          android:paddingEnd="@dimen/big_margin"
+          android:paddingBottom="@dimen/normal_margin"
+          app:layout_constraintEnd_toEndOf="parent"
+          app:layout_constraintStart_toStartOf="parent"
+          app:layout_constraintTop_toBottomOf="@id/cc_container"
+          tools:text="@string/card_verification_charde_disclaimer"
           />
 
       <Button
-          android:id="@+id/change_card_button"
-          style="@style/VerifyWallet.ChangeCard.Button"
+          android:id="@+id/submit"
+          style="@style/VerifyWallet.Submit.Button"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
-          android:layout_below="@id/adyen_card_form"
-          android:layout_alignParentEnd="true"
-          android:text="@string/activity_iab_change_card"
-          android:visibility="gone"
-          tools:visibility="visible"
+          android:layout_marginEnd="24dp"
+          android:enabled="false"
+          android:text="@string/get_code_button"
+          app:layout_constraintBaseline_toBaselineOf="@id/cancel"
+          app:layout_constraintBottom_toBottomOf="parent"
+          app:layout_constraintEnd_toEndOf="parent"
+          app:layout_constraintTop_toBottomOf="@id/description"
+          app:layout_constraintVertical_bias="0"
           />
 
-    </RelativeLayout>
+      <Button
+          android:id="@+id/cancel"
+          style="@style/VerifyWallet.Cancel.Button"
+          android:layout_width="wrap_content"
+          android:layout_height="wrap_content"
+          android:layout_marginTop="56dp"
+          android:text="@string/cancel"
+          app:layout_constraintBottom_toBottomOf="parent"
+          app:layout_constraintEnd_toStartOf="@id/submit"
+          app:layout_constraintHorizontal_bias="1"
+          app:layout_constraintStart_toStartOf="parent"
+          app:layout_constraintTop_toBottomOf="@id/description"
+          app:layout_constraintVertical_bias="0"
+          />
 
-    <TextView
-        android:id="@+id/description"
-        style="@style/VerifyWallet.Description"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/big_margin"
-        android:layout_marginTop="24dp"
-        android:layout_marginEnd="@dimen/big_margin"
-        android:paddingStart="@dimen/big_margin"
-        android:paddingTop="13dp"
-        android:paddingEnd="@dimen/big_margin"
-        android:paddingBottom="@dimen/normal_margin"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/cc_container"
-        tools:text="@string/card_verification_charde_disclaimer"
-        />
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
-    <Button
-        android:id="@+id/submit"
-        style="@style/VerifyWallet.Submit.Button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="24dp"
-        android:enabled="false"
-        android:text="@string/get_code_button"
-        app:layout_constraintBaseline_toBaselineOf="@id/cancel"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/description"
-        app:layout_constraintVertical_bias="0"
-        />
+  </ScrollView>
 
-    <Button
-        android:id="@+id/cancel"
-        style="@style/VerifyWallet.Cancel.Button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="56dp"
-        android:text="@string/cancel"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@id/submit"
-        app:layout_constraintHorizontal_bias="1"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/description"
-        app:layout_constraintVertical_bias="0"
-        />
+  <ProgressBar
+      android:id="@+id/progress_bar"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:indeterminateDrawable="@drawable/gradient_progress"
+      android:visibility="gone"
+      app:layout_constraintBottom_toBottomOf="parent"
+      app:layout_constraintEnd_toEndOf="parent"
+      app:layout_constraintStart_toStartOf="parent"
+      app:layout_constraintTop_toTopOf="parent"
+      tools:visibility="visible"
+      />
 
-  </androidx.constraintlayout.widget.ConstraintLayout>
+  <include
+      android:id="@+id/no_network"
+      layout="@layout/no_network_retry_only_layout"
+      android:layout_width="0dp"
+      android:layout_height="0dp"
+      android:visibility="gone"
+      app:layout_constraintBottom_toBottomOf="parent"
+      app:layout_constraintEnd_toEndOf="parent"
+      app:layout_constraintStart_toStartOf="parent"
+      app:layout_constraintTop_toTopOf="parent"
+      />
 
-</ScrollView>
+  <include
+      android:id="@+id/fragment_adyen_error"
+      layout="@layout/error_top_up_layout"
+      android:layout_width="0dp"
+      android:layout_height="0dp"
+      android:visibility="gone"
+      app:layout_constraintBottom_toBottomOf="parent"
+      app:layout_constraintEnd_toEndOf="parent"
+      app:layout_constraintStart_toStartOf="parent"
+      app:layout_constraintTop_toTopOf="parent"
+      />
+
+</androidx.constraintlayout.widget.ConstraintLayout>
