[MOB-87] Improved error layout for password fields

--- a/app/src/main/res/layout/layout_backup_password_toggle.xml
+++ b/app/src/main/res/layout/layout_backup_password_toggle.xml
@@ -56,7 +56,7 @@
       tools:visibility="visible"
       >
 
-    <com.google.android.material.textfield.TextInputLayout
+    <com.asfoundation.wallet.ui.backup.entry.PasswordInputLayout
         android:id="@+id/backup_password_input"
         style="@style/PasswordTextInputLayout"
         android:layout_width="match_parent"
@@ -71,17 +71,18 @@
           style="@style/PasswordEditText"
           android:layout_width="match_parent"
           android:layout_height="match_parent"
+          android:layout_marginBottom="@dimen/normal_margin"
           android:gravity="top"
           />
-    </com.google.android.material.textfield.TextInputLayout>
+    </com.asfoundation.wallet.ui.backup.entry.PasswordInputLayout>
 
-    <com.google.android.material.textfield.TextInputLayout
+    <com.asfoundation.wallet.ui.backup.entry.PasswordInputLayout
         android:id="@+id/backup_repeat_password_input"
         style="@style/PasswordTextInputLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/big_margin"
-        android:layout_marginTop="@dimen/big_margin"
+        android:layout_marginTop="@dimen/normal_margin"
         android:layout_marginEnd="@dimen/big_margin"
         android:hint="@string/repeat_password"
         app:layout_constraintTop_toBottomOf="@id/backup_password_input"
@@ -92,13 +93,14 @@
           style="@style/PasswordEditText"
           android:layout_width="match_parent"
           android:layout_height="match_parent"
+          android:layout_marginBottom="@dimen/normal_margin"
           android:gravity="top"
           />
-    </com.google.android.material.textfield.TextInputLayout>
+    </com.asfoundation.wallet.ui.backup.entry.PasswordInputLayout>
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/big_margin"
+        android:layout_marginTop="@dimen/normal_margin"
         android:background="@color/warning_background_color"
         android:paddingVertical="@dimen/normal_margin"
         app:layout_constraintTop_toBottomOf="@id/backup_repeat_password_input"
