[MOB-87] Created animation for toggle on password view

--- a/app/src/main/res/layout-land/fragment_backup_wallet_layout.xml
+++ b/app/src/main/res/layout-land/fragment_backup_wallet_layout.xml
@@ -5,6 +5,7 @@
     android:layout_height="match_parent"
     >
   <ScrollView
+      android:id="@+id/backup_scroll_view"
       android:layout_width="match_parent"
       android:layout_height="0dp"
       app:layout_constraintBottom_toTopOf="@id/backup_button_layout"
@@ -39,8 +40,6 @@
           app:layout_constraintGuide_percent="0.5"
           />
       <include
-          android:id="@+id/backup_password_toggle_layout"
-          layout="@layout/layout_backup_password_toggle"
           android:layout_width="0dp"
           android:layout_height="wrap_content"
           android:layout_marginStart="@dimen/normal_margin"
