--- a/app/src/main/res/layout/fragment_backup_wallet_layout.xml
+++ b/app/src/main/res/layout/fragment_backup_wallet_layout.xml
@@ -5,6 +5,7 @@
     android:layout_height="match_parent"
     >
   <ScrollView
+      android:id="@+id/backup_scroll_view"
       android:layout_width="match_parent"
       android:layout_height="0dp"
       app:layout_constraintBottom_toTopOf="@id/backup_button_layout"
@@ -26,7 +27,6 @@
           app:layout_constraintTop_toTopOf="parent"
           />
       <include
-          android:id="@+id/backup_password_toggle_layout"
           layout="@layout/layout_backup_password_toggle"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
