[MOB-87] Made changes based on zeplin layouts

--- a/app/src/main/res/layout/fragment_backup_wallet_layout.xml
+++ b/app/src/main/res/layout/fragment_backup_wallet_layout.xml
@@ -53,12 +53,12 @@
         />
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/backup_btn"
-        style="@style/MaterialButtonStyle"
+        style="@style/ButtonStyle.Alternative"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/big_margin"
         android:layout_marginEnd="@dimen/big_margin"
-        android:layout_marginBottom="32dp"
+        android:layout_marginBottom="26dp"
         android:text="@string/backup_button"
         app:layout_constraintBottom_toBottomOf="parent"
         />
