--- a/app/src/main/res/layout/layout_backup_password_toggle.xml
+++ b/app/src/main/res/layout/layout_backup_password_toggle.xml
@@ -15,7 +15,7 @@
       android:layout_width="0dp"
       android:layout_height="wrap_content"
       android:layout_marginStart="@dimen/big_margin"
-      android:layout_marginTop="@dimen/normal_margin"
+      android:layout_marginTop="@dimen/backup_password_padding"
       android:layout_marginEnd="@dimen/big_margin"
       android:text="@string/backup_additional_security_title"
       app:layout_constraintEnd_toStartOf="@id/backup_password_toggle"
@@ -24,11 +24,12 @@
       />
   <TextView
       android:id="@+id/choose_password_text"
+      style="@style/WalletBackupTextStyle.Normal"
       android:layout_width="0dp"
       android:layout_height="wrap_content"
       android:layout_marginTop="@dimen/small_margin"
       android:layout_marginEnd="@dimen/big_margin"
-      android:paddingBottom="@dimen/normal_margin"
+      android:paddingBottom="@dimen/backup_password_padding"
       android:text="@string/backup_additional_security_body"
       app:layout_constraintEnd_toStartOf="@id/backup_password_toggle"
       app:layout_constraintStart_toStartOf="@id/password_toggle_title"
@@ -39,9 +40,9 @@
       android:id="@+id/backup_password_toggle"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
-      android:layout_marginTop="@dimen/normal_margin"
+      android:layout_marginTop="24dp"
       android:layout_marginEnd="@dimen/big_margin"
-      android:thumb="@drawable/round_thumb"
+      android:thumb="@drawable/round_thumb_white"
       android:track="@drawable/round_track"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintTop_toTopOf="parent"
@@ -51,7 +52,7 @@
       android:id="@+id/password_group"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
-      android:layout_marginTop="@dimen/normal_margin"
+      android:layout_marginTop="@dimen/backup_password_padding"
       android:visibility="gone"
       app:layout_constraintTop_toBottomOf="@id/choose_password_text"
       tools:visibility="visible"
@@ -101,7 +102,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/normal_margin"
+        android:layout_marginTop="20dp"
         android:background="@color/warning_background_color"
         android:paddingVertical="@dimen/normal_margin"
         app:layout_constraintTop_toBottomOf="@id/backup_repeat_password_input"
@@ -109,10 +110,10 @@
 
       <ImageView
           android:id="@+id/warning_sign"
-          android:layout_width="24dp"
-          android:layout_height="24dp"
+          android:layout_width="wrap_content"
+          android:layout_height="wrap_content"
           android:layout_marginStart="@dimen/big_margin"
-          android:src="@drawable/ic_appc"
+          android:src="@drawable/ic_alert"
           app:layout_constraintBottom_toBottomOf="parent"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintTop_toTopOf="parent"
