--- a/app/src/main/res/layout/layout_wallet_backup_info.xml
+++ b/app/src/main/res/layout/layout_wallet_backup_info.xml
@@ -4,14 +4,15 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@color/grey_alpha_6b"
-    android:paddingVertical="@dimen/big_margin"
+    android:background="@color/grey_f4"
+    android:paddingTop="@dimen/backup_info_padding_top_and_horizontal"
+    android:paddingBottom="@dimen/backup_info_padding_bottom"
     >
 
   <ImageView
       android:id="@+id/backup_wallet_icon"
-      android:layout_width="wrap_content"
-      android:layout_height="wrap_content"
+      android:layout_width="@dimen/backup_entry_icon_width"
+      android:layout_height="@dimen/backup_entry_icon_height"
       android:src="@drawable/ic_wallet_address"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent"
@@ -20,14 +21,12 @@
 
   <TextView
       android:id="@+id/backup_wallet_address"
+      style="@style/WalletBackupTextStyle.Address"
       android:layout_width="0dp"
       android:layout_height="wrap_content"
       android:layout_marginStart="@dimen/big_margin"
-      android:layout_marginTop="@dimen/normal_margin"
+      android:layout_marginTop="@dimen/big_margin"
       android:layout_marginEnd="@dimen/big_margin"
-      android:ellipsize="end"
-      android:gravity="center"
-      android:maxLines="1"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toBottomOf="@id/backup_wallet_icon"
@@ -52,21 +51,19 @@
       android:id="@+id/backup_separator"
       android:layout_width="match_parent"
       android:layout_height="1dp"
-      android:layout_marginTop="@dimen/normal_margin"
-      android:layout_marginBottom="@dimen/big_margin"
+      android:layout_marginTop="12dp"
       android:background="@color/list_separator_color"
       app:layout_constraintTop_toBottomOf="@id/backup_balance"
       />
 
   <TextView
+      style="@style/WalletBackupTextStyle.Description"
       android:layout_width="0dp"
       android:layout_height="wrap_content"
-      android:layout_marginStart="@dimen/big_margin"
-      android:layout_marginTop="@dimen/normal_margin"
-      android:layout_marginEnd="@dimen/big_margin"
-      android:gravity="center"
+      android:layout_marginStart="@dimen/backup_info_padding_top_and_horizontal"
+      android:layout_marginTop="12dp"
+      android:layout_marginEnd="@dimen/backup_info_padding_top_and_horizontal"
       android:text="@string/backup_body"
-      android:textAlignment="gravity"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toBottomOf="@id/backup_separator"
