--- a/app/src/main/res/drawable/item_curved_border.xml
+++ b/app/src/main/res/drawable/item_curved_border.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android"
-    android:color="#e5e5e5">
+    android:color="@color/grey_e5">
   <item>
     <shape android:shape="rectangle">
-      <solid android:color="@android:color/transparent"/>
+      <solid android:color="@android:color/transparent" />
       <stroke
-          android:color="#e5e5e5"
-          android:width="1dp"/>
-      <corners android:radius="3dp"/>
+          android:width="1dp"
+          android:color="@color/grey_e5" />
+      <corners android:radius="3dp" />
     </shape>
   </item>
 </layer-list>
