--- a/app/src/main/res/drawable/payment_method_background.xml
+++ b/app/src/main/res/drawable/payment_method_background.xml
@@ -5,8 +5,8 @@
       android:bottomLeftRadius="0dp"
       android:bottomRightRadius="0dp"
       android:radius="2dp"
-      android:topRightRadius="0dp"/>
+      android:topRightRadius="0dp" />
   <stroke
       android:width="1dp"
-      android:color="#e5e5e5"/>
+      android:color="@color/grey_e5" />
 </shape>
