--- a/app/src/main/res/drawable/rectangle_outline_grey.xml
+++ b/app/src/main/res/drawable/rectangle_outline_grey.xml
@@ -5,7 +5,7 @@
   <!-- View border color and width -->
   <stroke
       android:width="1dp"
-      android:color="#e5e5e5" />
+      android:color="@color/grey_e5" />
 
   <!-- The radius makes the corners rounded -->
   <corners android:radius="3dp" />
