--- a/app/src/main/res/layout-land/fragment_backup_wallet_layout.xml
+++ b/app/src/main/res/layout-land/fragment_backup_wallet_layout.xml
@@ -16,9 +16,9 @@
         android:layout_height="wrap_content"
         android:focusableInTouchMode="true"
         android:orientation="vertical"
-        android:paddingStart="16dp"
+        android:paddingStart="8dp"
         android:paddingTop="@dimen/normal_margin"
-        android:paddingEnd="16dp"
+        android:paddingEnd="12dp"
         android:paddingBottom="@dimen/normal_margin"
         >
 
@@ -40,6 +40,7 @@
           app:layout_constraintGuide_percent="0.5"
           />
       <include
+          layout="@layout/layout_backup_password_toggle"
           android:layout_width="0dp"
           android:layout_height="wrap_content"
           android:layout_marginStart="@dimen/normal_margin"
@@ -59,21 +60,16 @@
       app:layout_constraintHeight_max="86dp"
       app:layout_constraintTop_toTopOf="@id/horizontal_guideline"
       >
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:layout_alignParentTop="true"
-        android:background="@color/list_separator_color"
-        />
+
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/backup_btn"
-        style="@style/MaterialButtonStyle.Backup"
+        style="@style/ButtonStyle.Alternative.Backup"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
         android:layout_marginTop="16dp"
-        android:layout_marginEnd="32dp"
+        android:layout_marginEnd="16dp"
         android:text="@string/backup_button"
         />
 
