--- a/app/src/main/res/values-land/dimens.xml
+++ b/app/src/main/res/values-land/dimens.xml
@@ -9,4 +9,12 @@
   <dimen name="backup_success_icon_margin_top">28dp</dimen>
   <dimen name="backup_success_text_margin_top">12dp</dimen>
   <dimen name="backup_success_text_box_horizontal_margin">128dp</dimen>
+
+  <!--Backup entry -->
+  <dimen name="backup_password_padding">16dp</dimen>
+  <dimen name="backup_warning_margin">8dp</dimen>
+  <dimen name="backup_info_padding_top_and_horizontal">16dp</dimen>
+  <dimen name="backup_info_padding_bottom">20dp</dimen>
+  <dimen name="backup_entry_icon_width">48dp</dimen>
+  <dimen name="backup_entry_icon_height">45dp</dimen>
 </resources>
