--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -26,6 +26,10 @@
   <color name="iab_activity_gray">#8a000000</color>
   <color name="black_87_alpha">#de000000</color>
   <color name="grey">#757575</color>
+  <color name="grey_f4">#91f4f4f4</color>
+  <color name="grey_5a">#5a5a5a</color>
+  <color name="grey_e5">#e5e5e5</color>
+  <color name="grey_65">#656565</color>
 
   <color name="appbar_start_gradient_color">#000000</color>
   <color name="appbar_end_gradient_color">#012945</color>
@@ -110,8 +114,8 @@
 
   <!-- Backup -->
 
-  <color name="warning_background_color">#ffcccb</color>
-  <color name="warning_text_red">#ff2f2f</color>
+  <color name="warning_background_color">#0Ae44b46</color>
+  <color name="warning_text_red">#e44b46</color>
   <!-- Skeletons -->
 
   <color name="skeleton_dark_base_color">#5cd8d8d8</color>
