[MOB-87] Made changes based on zeplin layouts

--- a/app/src/main/res/layout/fragment_backup_wallet_layout.xml
+++ b/app/src/main/res/layout/fragment_backup_wallet_layout.xml
@@ -53,7 +53,7 @@
         />
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/backup_btn"
-        style="@style/ButtonStyle.Alternative"
+        style="@style/ButtonStyle.Alternative.Backup"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/big_margin"
