[MOB-87] Improved layout

--- a/app/src/main/res/layout/layout_backup_password_toggle.xml
+++ b/app/src/main/res/layout/layout_backup_password_toggle.xml
@@ -11,7 +11,7 @@
 
   <TextView
       android:id="@+id/password_toggle_title"
-      style="@style/WalletBackupTextStyle.Bold"
+      style="@style/WalletBackupTextStyle.Bold.Inactive"
       android:layout_width="0dp"
       android:layout_height="wrap_content"
       android:layout_marginStart="@dimen/big_margin"
@@ -40,7 +40,7 @@
       android:id="@+id/backup_password_toggle"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
-      android:layout_marginTop="24dp"
+      android:layout_marginTop="12dp"
       android:layout_marginEnd="@dimen/big_margin"
       android:thumb="@drawable/round_thumb_white"
       android:track="@drawable/round_track"
