--- a/app/src/main/res/values-land/dimens.xml
+++ b/app/src/main/res/values-land/dimens.xml
@@ -17,4 +17,6 @@
   <dimen name="backup_info_padding_bottom">20dp</dimen>
   <dimen name="backup_entry_icon_width">48dp</dimen>
   <dimen name="backup_entry_icon_height">45dp</dimen>
+  <dimen name="backup_description_normal_text_size">12sp</dimen>
+  <dimen name="backup_description_line_spacing_extra">8sp</dimen>
 </resources>
