--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -64,4 +64,6 @@
   <dimen name="backup_info_padding_bottom">26dp</dimen>
   <dimen name="backup_entry_icon_width">56dp</dimen>
   <dimen name="backup_entry_icon_height">54dp</dimen>
+  <dimen name="backup_description_normal_text_size">14sp</dimen>
+  <dimen name="backup_description_line_spacing_extra">6sp</dimen>
 </resources>
