--- a/app/src/main/res/layout/layout_wallet_backup_info.xml
+++ b/app/src/main/res/layout/layout_wallet_backup_info.xml
@@ -24,9 +24,9 @@
       style="@style/WalletBackupTextStyle.Address"
       android:layout_width="0dp"
       android:layout_height="wrap_content"
-      android:layout_marginStart="@dimen/big_margin"
+      android:layout_marginStart="40dp"
       android:layout_marginTop="@dimen/big_margin"
-      android:layout_marginEnd="@dimen/big_margin"
+      android:layout_marginEnd="40dp"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toBottomOf="@id/backup_wallet_icon"
